# smol_interp

./: README.md  run.sh  setup.sh
backend/: app.py  pyproject.toml
frontend/: package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/autosteer/: page.tsx
frontend/components/: autosteer-demo.tsx  generation-interface.tsx  header.tsx  mixer-panel.tsx  steering-interface.tsx  theme-toggle.tsx
frontend/lib/: api.ts  types.ts
