[project]
name = "backend"
version = "0.1.0"
description = "smol mech interp backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "modal>=1.2.4",
    "transformer-lens>=2.0.0",
    "fastapi>=0.115.0",
    "sae-lens>=4.0.0",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "basedpyright>=1.36.1",
    "ruff>=0.14.9",
]
